testdata/golden/invalid/features/invalid_network.cm
# Invalid Network Functions

# Invalid storage type for rtt
bad_rtt = rtt(invalid_scope)

# Invalid network type for throughput  
bad_throughput = throughput(ethernet)

# Wrong argument count
bad_transfer = transfer_time(1 GB)

# Wrong argument types
bad_read = read("not a quantity", ssd)
